# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml  linter-test-check.yml  test-check.yml
gendiff/: __init__.py  common.py  generate_diff.py  get_diff.py  json_form.py  plain.py  process_file.py  stylish.py
gendiff/formatters/: __init__.py  json_form.py  plain.py  stylish.py
gendiff/scripts/: formatting.py  gendiff.py  process_file.py  process_json.py  process_yaml.py
tests/: test_gendiff.py
tests/fixtures/: diff.json  file1.yaml
